fix: playlist buttons out of screen

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -241,7 +241,7 @@ a {
 
 .PlaylistItemsContainer {
   overflow-y: auto;
-  max-height: 60vh;
+  max-height: 50vh;
 }
 
 .formButton {
